# otss_validation

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  build.sh
src/: main.cc
tools/: cpplint.py
